// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden protocol fixtures > agents list 1`] = `
{
  "changed": false,
  "command": "agents.list",
  "data": {
    "agents": [
      {
        "defaultTargetPath": "~/.agents/skills",
        "displayName": "OpenAI Codex CLI",
        "effectiveTargetPath": "~/.agents/skills",
        "enabled": true,
        "id": "codex",
        "notes": [],
        "selectedSkillIds": [
          "corvus-skillpack:git-commit",
        ],
        "supportStatus": "supported",
        "warnings": [],
      },
      {
        "defaultTargetPath": "~/.claude/skills",
        "displayName": "Claude Code",
        "effectiveTargetPath": "~/.claude/skills",
        "enabled": false,
        "id": "claude",
        "notes": [],
        "selectedSkillIds": [],
        "supportStatus": "supported",
        "warnings": [],
      },
      {
        "defaultTargetPath": "~/.copilot/skills",
        "displayName": "GitHub Copilot CLI",
        "effectiveTargetPath": "~/.copilot/skills",
        "enabled": false,
        "id": "copilot",
        "notes": [
          "Uses the implementation-plan Copilot CLI skill path strategy.",
        ],
        "selectedSkillIds": [],
        "supportStatus": "supported",
        "warnings": [],
      },
      {
        "defaultTargetPath": "~/.config/opencode/skills",
        "displayName": "OpenCode",
        "effectiveTargetPath": "~/.config/opencode/skills",
        "enabled": false,
        "id": "opencode",
        "notes": [
          "Uses the implementation-plan OpenCode skill path strategy.",
        ],
        "selectedSkillIds": [],
        "supportStatus": "supported",
        "warnings": [],
      },
      {
        "defaultTargetPath": "~/.pi/agent/skills",
        "displayName": "Pi Agent",
        "effectiveTargetPath": "~/.pi/agent/skills",
        "enabled": false,
        "id": "pi",
        "notes": [
          "Uses the implementation-plan Pi Agent skill path strategy.",
        ],
        "selectedSkillIds": [],
        "supportStatus": "supported",
        "warnings": [],
      },
      {
        "displayName": "Custom Agent",
        "enabled": false,
        "id": "custom",
        "notes": [
          "Set a target path before planning links.",
        ],
        "selectedSkillIds": [],
        "supportStatus": "custom",
        "warnings": [],
      },
      {
        "defaultTargetPath": "~/.gemini/skills",
        "displayName": "Gemini CLI",
        "effectiveTargetPath": "~/.gemini/skills",
        "enabled": false,
        "id": "gemini",
        "notes": [
          "Uses Gemini CLI Agent Skills directory support.",
        ],
        "selectedSkillIds": [],
        "supportStatus": "supported",
        "warnings": [],
      },
    ],
  },
  "errors": [],
  "nextActions": [],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > bundles search 1`] = `
{
  "changed": false,
  "command": "bundles.search",
  "data": {
    "limit": 20,
    "query": "review quality",
    "results": [
      {
        "compatibility": [
          {
            "agentId": "codex",
            "compatible": true,
            "issues": [],
          },
        ],
        "description": "A maintained code review composition.",
        "id": "default",
        "keywords": [
          "quality gate",
          "pull request",
        ],
        "matchedFields": [
          "description",
          "keywords",
          "tags",
          "title",
        ],
        "matchedTerms": [
          "quality",
          "review",
        ],
        "matches": [
          {
            "field": "title",
            "kind": "partial",
            "term": "review",
            "weight": 30,
          },
          {
            "field": "tags",
            "kind": "exact",
            "term": "review",
            "weight": 15,
          },
          {
            "field": "description",
            "kind": "partial",
            "term": "review",
            "weight": 4,
          },
          {
            "field": "keywords",
            "kind": "partial",
            "term": "quality",
            "weight": 7,
          },
        ],
        "members": [
          {
            "actualVersion": "2.1.0",
            "id": "review-helper",
            "ref": "corvus-skillpack:review-helper",
            "versionRange": "~2.1.0",
          },
          {
            "actualVersion": "3.0.0-beta.1",
            "id": "test-helper",
            "ref": "corvus-skillpack:test-helper",
            "versionRange": ">=3.0.0-beta.1 <4.0.0",
          },
          {
            "actualVersion": "1.0.0",
            "id": "docs-helper",
            "ref": "corvus-skillpack:docs-helper",
            "versionRange": "^1.0.0",
          },
        ],
        "ref": "corvus-skillpack:default",
        "score": 56,
        "skillpackId": "corvus-skillpack",
        "supportedAgents": [
          "codex",
        ],
        "tags": [
          "review",
        ],
        "title": "Review Workflow",
        "version": "1.2.0",
      },
    ],
    "terms": [
      "quality",
      "review",
    ],
    "totalMatches": 1,
  },
  "errors": [],
  "nextActions": [],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > install plan blocked by an unmanaged target 1`] = `
{
  "changed": false,
  "command": "install.plan",
  "data": {
    "plan": {
      "configChanges": [
        {
          "agentId": "codex",
          "enabledFrom": false,
          "enabledTo": true,
          "selectedBundleIdsFrom": [],
          "selectedBundleIdsTo": [],
          "selectedSkillIdsFrom": [],
          "selectedSkillIdsTo": [
            "corvus-skillpack:git-commit",
          ],
          "targetPathTo": "~/.agents/skills",
        },
      ],
      "conflicts": [
        {
          "agentId": "codex",
          "code": "unmanaged-target-exists",
          "message": "Target already exists and is not manager-owned: <HOME>/.agents/skills/git-commit",
          "path": "<HOME>/.agents/skills/git-commit",
          "severity": "conflict",
          "skillId": "corvus-skillpack:git-commit",
        },
      ],
      "managerStateDir": "<HOME>/.agents/corvus-skill-manager",
      "operations": [],
      "request": {
        "allCompatible": false,
        "bundleSelectionMode": "explicit",
        "replaceSelection": false,
        "schemaVersion": 2,
        "selectedBundles": [],
        "selectedSkills": [
          {
            "id": "git-commit",
          },
        ],
        "targetAgents": [
          "codex",
        ],
      },
      "rootSelections": [
        {
          "agentId": "codex",
          "selectedBundleIds": [],
          "selectedSkillIds": [
            "corvus-skillpack:git-commit",
          ],
        },
      ],
      "selections": [
        {
          "agentId": "codex",
          "origins": [
            {
              "kind": "explicit",
              "reason": "explicit",
            },
          ],
          "reason": "explicit",
          "reasonKind": "explicit",
          "skillId": "corvus-skillpack:git-commit",
        },
      ],
      "skillpackCheckoutPath": "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      "skillpackCheckoutPaths": [
        "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      ],
      "stateFingerprint": {
        "algorithm": "sha256",
        "components": {
          "<NORMALIZED>": "<SHA256>",
        },
        "value": "<SHA256>",
      },
      "summary": {
        "alreadySatisfied": 0,
        "bundleMembersAdded": [],
        "bundlesSelected": [],
        "configChanges": 1,
        "conflicts": 1,
        "creates": 0,
        "dependenciesAdded": [],
        "effectiveSkills": [
          "corvus-skillpack:git-commit",
        ],
        "recommendationsNotSelected": [],
        "removals": 0,
        "riskWarnings": 0,
      },
      "targetAgents": [
        "codex",
      ],
      "warnings": [],
    },
    "requiresConfirmation": false,
  },
  "errors": [
    {
      "agentId": "codex",
      "category": "conflict",
      "code": "UNMANAGED_TARGET_EXISTS",
      "message": "Target already exists and is not manager-owned: <HOME>/.agents/skills/git-commit",
      "path": "<HOME>/.agents/skills/git-commit",
      "retryable": false,
      "skillId": "corvus-skillpack:git-commit",
    },
  ],
  "nextActions": [
    {
      "code": "resolve-unmanaged-target",
      "description": "Move or remove the unmanaged target yourself, or drop that skill, then plan again.",
    },
  ],
  "ok": false,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > install plan with a bundle root 1`] = `
{
  "changed": false,
  "command": "install.plan",
  "data": {
    "digest": "<SHA256>",
    "plan": {
      "configChanges": [
        {
          "agentId": "codex",
          "enabledFrom": false,
          "enabledTo": true,
          "selectedBundleIdsFrom": [],
          "selectedBundleIdsTo": [
            "corvus-skillpack:documentation",
          ],
          "selectedSkillIdsFrom": [],
          "selectedSkillIdsTo": [],
          "targetPathTo": "~/.agents/skills",
        },
      ],
      "conflicts": [],
      "managerStateDir": "<HOME>/.agents/corvus-skill-manager",
      "operations": [
        {
          "agentId": "codex",
          "skillId": "corvus-skillpack:docs-helper",
          "sourcePath": "<HOME>/.agents/skillpacks/corvus-skillpack/current/skills/docs-helper",
          "targetPath": "<HOME>/.agents/skills/docs-helper",
          "type": "create-link",
        },
      ],
      "request": {
        "allCompatible": false,
        "bundleSelectionMode": "explicit",
        "replaceSelection": false,
        "schemaVersion": 2,
        "selectedBundles": [
          {
            "id": "documentation",
          },
        ],
        "selectedSkills": [],
        "targetAgents": [
          "codex",
        ],
      },
      "rootSelections": [
        {
          "agentId": "codex",
          "selectedBundleIds": [
            "corvus-skillpack:documentation",
          ],
          "selectedSkillIds": [],
        },
      ],
      "selections": [
        {
          "agentId": "codex",
          "origins": [
            {
              "kind": "bundle-member",
              "reason": "bundle:corvus-skillpack:documentation",
            },
          ],
          "reason": "bundle:corvus-skillpack:documentation",
          "reasonKind": "bundle-member",
          "skillId": "corvus-skillpack:docs-helper",
        },
      ],
      "skillpackCheckoutPath": "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      "skillpackCheckoutPaths": [
        "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      ],
      "stateFingerprint": {
        "algorithm": "sha256",
        "components": {
          "<NORMALIZED>": "<SHA256>",
        },
        "value": "<SHA256>",
      },
      "summary": {
        "alreadySatisfied": 0,
        "bundleMembersAdded": [
          "corvus-skillpack:docs-helper",
        ],
        "bundlesSelected": [
          "corvus-skillpack:documentation",
        ],
        "configChanges": 1,
        "conflicts": 0,
        "creates": 1,
        "dependenciesAdded": [],
        "effectiveSkills": [
          "corvus-skillpack:docs-helper",
        ],
        "recommendationsNotSelected": [],
        "removals": 0,
        "riskWarnings": 0,
      },
      "targetAgents": [
        "codex",
      ],
      "warnings": [],
    },
    "planId": "install-<DIGEST32>",
    "planPath": "<HOME>/.agents/corvus-skill-manager/plans/install-<DIGEST32>.json",
    "requiresConfirmation": true,
  },
  "errors": [],
  "nextActions": [
    {
      "code": "apply-install-plan",
      "command": "corvus-skills install apply --plan-id install-<DIGEST32> --confirm install-<DIGEST32> --json",
      "description": "Apply the reviewed plan with the exact confirmation token.",
    },
  ],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > install plan with a dependency expansion 1`] = `
{
  "changed": false,
  "command": "install.plan",
  "data": {
    "digest": "<SHA256>",
    "plan": {
      "configChanges": [
        {
          "agentId": "codex",
          "enabledFrom": false,
          "enabledTo": true,
          "selectedBundleIdsFrom": [],
          "selectedBundleIdsTo": [],
          "selectedSkillIdsFrom": [],
          "selectedSkillIdsTo": [
            "corvus-skillpack:embedded-driver-development",
          ],
          "targetPathTo": "~/.agents/skills",
        },
      ],
      "conflicts": [],
      "managerStateDir": "<HOME>/.agents/corvus-skill-manager",
      "operations": [
        {
          "agentId": "codex",
          "skillId": "corvus-skillpack:embedded-driver-development",
          "sourcePath": "<HOME>/.agents/skillpacks/corvus-skillpack/current/skills/embedded-driver-development",
          "targetPath": "<HOME>/.agents/skills/embedded-driver-development",
          "type": "create-link",
        },
        {
          "agentId": "codex",
          "skillId": "corvus-skillpack:embedded-toolchain",
          "sourcePath": "<HOME>/.agents/skillpacks/corvus-skillpack/current/skills/embedded-toolchain",
          "targetPath": "<HOME>/.agents/skills/embedded-toolchain",
          "type": "create-link",
        },
      ],
      "request": {
        "allCompatible": false,
        "bundleSelectionMode": "explicit",
        "replaceSelection": false,
        "schemaVersion": 2,
        "selectedBundles": [],
        "selectedSkills": [
          {
            "id": "embedded-driver-development",
          },
        ],
        "targetAgents": [
          "codex",
        ],
      },
      "rootSelections": [
        {
          "agentId": "codex",
          "selectedBundleIds": [],
          "selectedSkillIds": [
            "corvus-skillpack:embedded-driver-development",
          ],
        },
      ],
      "selections": [
        {
          "agentId": "codex",
          "origins": [
            {
              "kind": "explicit",
              "reason": "explicit",
            },
          ],
          "reason": "explicit",
          "reasonKind": "explicit",
          "skillId": "corvus-skillpack:embedded-driver-development",
        },
        {
          "agentId": "codex",
          "origins": [
            {
              "kind": "dependency-of",
              "reason": "dependency-of:corvus-skillpack:embedded-driver-development",
            },
          ],
          "reason": "dependency-of:corvus-skillpack:embedded-driver-development",
          "reasonKind": "dependency-of",
          "skillId": "corvus-skillpack:embedded-toolchain",
        },
      ],
      "skillpackCheckoutPath": "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      "skillpackCheckoutPaths": [
        "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      ],
      "stateFingerprint": {
        "algorithm": "sha256",
        "components": {
          "<NORMALIZED>": "<SHA256>",
        },
        "value": "<SHA256>",
      },
      "summary": {
        "alreadySatisfied": 0,
        "bundleMembersAdded": [],
        "bundlesSelected": [],
        "configChanges": 1,
        "conflicts": 0,
        "creates": 2,
        "dependenciesAdded": [
          "corvus-skillpack:embedded-toolchain",
        ],
        "effectiveSkills": [
          "corvus-skillpack:embedded-driver-development",
          "corvus-skillpack:embedded-toolchain",
        ],
        "recommendationsNotSelected": [
          "corvus-skillpack:embedded-testing",
        ],
        "removals": 0,
        "riskWarnings": 0,
      },
      "targetAgents": [
        "codex",
      ],
      "warnings": [],
    },
    "planId": "install-<DIGEST32>",
    "planPath": "<HOME>/.agents/corvus-skill-manager/plans/install-<DIGEST32>.json",
    "requiresConfirmation": true,
  },
  "errors": [],
  "nextActions": [
    {
      "code": "apply-install-plan",
      "command": "corvus-skills install apply --plan-id install-<DIGEST32> --confirm install-<DIGEST32> --json",
      "description": "Apply the reviewed plan with the exact confirmation token.",
    },
  ],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [
    {
      "code": "recommendation-not-selected",
      "message": "Skill "corvus-skillpack:embedded-testing" is recommended by a selected skill but was not selected; recommendations are never installed automatically.",
      "skillId": "corvus-skillpack:embedded-testing",
    },
  ],
}
`;

exports[`golden protocol fixtures > invalid request document 1`] = `
{
  "changed": false,
  "command": "install.plan",
  "data": {},
  "errors": [
    {
      "category": "invalid-request",
      "code": "INVALID_REQUEST",
      "field": "request",
      "message": "targetAgents: Required",
      "retryable": false,
    },
  ],
  "nextActions": [
    {
      "code": "read-capabilities",
      "command": "corvus-skills capabilities --json",
      "description": "Inspect the request schema advertised by the binary.",
    },
  ],
  "ok": false,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > skillpack status 1`] = `
{
  "changed": false,
  "command": "skillpack.status",
  "data": {
    "configExists": true,
    "configPath": "<HOME>/.agents/corvus-skill-manager/config.json",
    "configValid": true,
    "configured": true,
    "skillpack": {
      "branch": "main",
      "checkoutExists": true,
      "checkoutPath": "<HOME>/.agents/skillpacks/corvus-skillpack/current",
      "checkoutReadable": true,
      "currentCommit": "<COMMIT>",
      "dirty": false,
      "dirtyFiles": [],
      "discoveredSkillCount": 8,
      "discoveryErrorCount": 0,
      "discoveryWarningCount": 0,
      "id": "corvus-skillpack",
      "repositoryUrl": "https://github.com/xiero/skill-collection.git",
    },
    "skillpacks": [
      {
        "branch": "main",
        "checkoutExists": true,
        "checkoutPath": "<HOME>/.agents/skillpacks/corvus-skillpack/current",
        "checkoutReadable": true,
        "currentCommit": "<COMMIT>",
        "dirty": false,
        "dirtyFiles": [],
        "discoveredSkillCount": 8,
        "discoveryErrorCount": 0,
        "discoveryWarningCount": 0,
        "id": "corvus-skillpack",
        "repositoryUrl": "https://github.com/xiero/skill-collection.git",
      },
    ],
  },
  "errors": [],
  "nextActions": [
    {
      "code": "list-skills",
      "command": "corvus-skills skills list --json",
      "description": "List the discovered skill catalog.",
    },
  ],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > skills check-version-discipline 1`] = `
{
  "changed": false,
  "command": "skills.check-version-discipline",
  "data": {
    "basePath": "<HOME>/.agents/skillpacks/corvus-skillpack/revisions/<COMMIT>/repo",
    "baseRegistryVersion": 3,
    "bundleDeltas": [],
    "candidatePath": "<HOME>/.agents/skillpacks/corvus-skillpack/revisions/<COMMIT>/repo",
    "candidateRegistryVersion": 3,
    "issues": [],
    "severity": "error",
    "skillDeltas": [],
    "valid": true,
  },
  "errors": [],
  "nextActions": [],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > skills search 1`] = `
{
  "changed": false,
  "command": "skills.search",
  "data": {
    "limit": 3,
    "query": "embedded firmware cmake",
    "results": [
      {
        "conflictsWith": [],
        "description": "Helps implement and review embedded C/C++ peripheral drivers.",
        "domains": [
          "embedded",
          "firmware",
        ],
        "id": "embedded-driver-development",
        "keywords": [
          "hal",
          "registers",
          "interrupts",
          "peripherals",
        ],
        "languages": [
          "c",
          "cpp",
        ],
        "matchedFields": [
          "description",
          "domains",
          "id",
          "tags",
          "technologies",
          "title",
        ],
        "matchedTerms": [
          "cmake",
          "embedded",
          "firmware",
        ],
        "matches": [
          {
            "field": "id",
            "kind": "partial",
            "term": "embedded",
            "weight": 50,
          },
          {
            "field": "title",
            "kind": "partial",
            "term": "embedded",
            "weight": 30,
          },
          {
            "field": "domains",
            "kind": "exact",
            "term": "embedded",
            "weight": 40,
          },
          {
            "field": "description",
            "kind": "partial",
            "term": "embedded",
            "weight": 4,
          },
          {
            "field": "domains",
            "kind": "exact",
            "term": "firmware",
            "weight": 40,
          },
          {
            "field": "tags",
            "kind": "exact",
            "term": "firmware",
            "weight": 15,
          },
          {
            "field": "technologies",
            "kind": "exact",
            "term": "cmake",
            "weight": 25,
          },
        ],
        "nonGoals": [
          "General-purpose web application development",
        ],
        "platforms": [
          "bare-metal",
          "rtos",
        ],
        "recommends": [
          "corvus-skillpack:embedded-testing",
        ],
        "ref": "corvus-skillpack:embedded-driver-development",
        "relativePath": "skills/embedded-driver-development",
        "requires": [
          "corvus-skillpack:embedded-toolchain",
        ],
        "riskWarnings": [],
        "score": 204,
        "skillpackId": "corvus-skillpack",
        "supportedAgents": [
          "codex",
          "claude",
        ],
        "tags": [
          "firmware",
        ],
        "tasks": [
          "driver-development",
          "debugging",
          "code-review",
        ],
        "technologies": [
          "cmake",
          "gcc",
          "stm32",
        ],
        "title": "Embedded Driver Development",
        "useCases": [
          "Implement a new peripheral driver",
        ],
      },
      {
        "conflictsWith": [],
        "description": "Configures cross-compilation toolchains and build files.",
        "domains": [
          "embedded",
        ],
        "id": "embedded-toolchain",
        "keywords": [
          "linker",
          "cross-compile",
        ],
        "languages": [
          "c",
          "cpp",
        ],
        "matchedFields": [
          "domains",
          "id",
          "tags",
          "technologies",
          "title",
        ],
        "matchedTerms": [
          "cmake",
          "embedded",
          "firmware",
        ],
        "matches": [
          {
            "field": "id",
            "kind": "partial",
            "term": "embedded",
            "weight": 50,
          },
          {
            "field": "title",
            "kind": "partial",
            "term": "embedded",
            "weight": 30,
          },
          {
            "field": "domains",
            "kind": "exact",
            "term": "embedded",
            "weight": 40,
          },
          {
            "field": "tags",
            "kind": "exact",
            "term": "firmware",
            "weight": 15,
          },
          {
            "field": "technologies",
            "kind": "exact",
            "term": "cmake",
            "weight": 25,
          },
        ],
        "nonGoals": [],
        "platforms": [
          "bare-metal",
        ],
        "recommends": [],
        "ref": "corvus-skillpack:embedded-toolchain",
        "relativePath": "skills/embedded-toolchain",
        "requires": [],
        "riskWarnings": [],
        "score": 160,
        "skillpackId": "corvus-skillpack",
        "supportedAgents": [
          "codex",
          "claude",
          "gemini",
        ],
        "tags": [
          "firmware",
        ],
        "tasks": [
          "build-configuration",
        ],
        "technologies": [
          "cmake",
          "gcc",
        ],
        "title": "Embedded Toolchain",
        "useCases": [
          "Set up a cross-compilation toolchain",
        ],
      },
      {
        "conflictsWith": [],
        "description": "Adds unit-testing and hardware abstraction guidance for firmware.",
        "domains": [
          "embedded",
          "testing",
        ],
        "id": "embedded-testing",
        "keywords": [
          "mocks",
          "fakes",
          "hardware abstraction",
        ],
        "languages": [
          "c",
          "cpp",
        ],
        "matchedFields": [
          "domains",
          "id",
          "tags",
          "title",
        ],
        "matchedTerms": [
          "embedded",
          "firmware",
        ],
        "matches": [
          {
            "field": "id",
            "kind": "partial",
            "term": "embedded",
            "weight": 50,
          },
          {
            "field": "title",
            "kind": "partial",
            "term": "embedded",
            "weight": 30,
          },
          {
            "field": "domains",
            "kind": "exact",
            "term": "embedded",
            "weight": 40,
          },
          {
            "field": "tags",
            "kind": "exact",
            "term": "firmware",
            "weight": 15,
          },
        ],
        "nonGoals": [],
        "platforms": [
          "bare-metal",
        ],
        "recommends": [],
        "ref": "corvus-skillpack:embedded-testing",
        "relativePath": "skills/embedded-testing",
        "requires": [],
        "riskWarnings": [],
        "score": 135,
        "skillpackId": "corvus-skillpack",
        "supportedAgents": [
          "codex",
          "claude",
        ],
        "tags": [
          "firmware",
        ],
        "tasks": [
          "testing",
          "test-design",
        ],
        "technologies": [
          "ceedling",
          "unity",
        ],
        "title": "Embedded Testing",
        "useCases": [
          "Add unit tests around a peripheral driver",
        ],
      },
    ],
    "terms": [
      "cmake",
      "embedded",
      "firmware",
    ],
    "totalMatches": 3,
  },
  "errors": [],
  "nextActions": [
    {
      "code": "inspect-skills",
      "command": "corvus-skills skills inspect <skill-id...> --json",
      "description": "Inspect the top candidates, then pass exact skill IDs to install plan.",
    },
  ],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > skills validate-registry 1`] = `
{
  "changed": false,
  "command": "skills.validate-registry",
  "data": {
    "bundleCount": 0,
    "coverage": [
      {
        "field": "domains",
        "percent": 100,
        "skillsWithValues": 8,
        "totalSkills": 8,
      },
      {
        "field": "tasks",
        "percent": 100,
        "skillsWithValues": 8,
        "totalSkills": 8,
      },
      {
        "field": "languages",
        "percent": 87,
        "skillsWithValues": 7,
        "totalSkills": 8,
      },
      {
        "field": "technologies",
        "percent": 100,
        "skillsWithValues": 8,
        "totalSkills": 8,
      },
      {
        "field": "platforms",
        "percent": 62,
        "skillsWithValues": 5,
        "totalSkills": 8,
      },
      {
        "field": "keywords",
        "percent": 100,
        "skillsWithValues": 8,
        "totalSkills": 8,
      },
      {
        "field": "useCases",
        "percent": 100,
        "skillsWithValues": 8,
        "totalSkills": 8,
      },
      {
        "field": "nonGoals",
        "percent": 25,
        "skillsWithValues": 2,
        "totalSkills": 8,
      },
      {
        "field": "requires",
        "percent": 12,
        "skillsWithValues": 1,
        "totalSkills": 8,
      },
      {
        "field": "recommends",
        "percent": 25,
        "skillsWithValues": 2,
        "totalSkills": 8,
      },
      {
        "field": "conflictsWith",
        "percent": 0,
        "skillsWithValues": 0,
        "totalSkills": 8,
      },
    ],
    "currentRegistryVersion": 3,
    "invalidEntries": [],
    "registryPath": "<HOME>/.agents/skillpacks/corvus-skillpack/current/registry.json",
    "registryVersion": 2,
    "requiredDependencyCycles": [],
    "skillCount": 8,
    "skillsMissingSemanticMetadata": [],
    "source": "registry",
    "supportedRegistryVersions": [
      1,
      2,
      3,
    ],
    "unknownRelationshipTargets": [],
    "valid": true,
    "validBundleMembershipCount": 0,
    "versionedSkillCount": 0,
  },
  "errors": [],
  "nextActions": [],
  "ok": true,
  "schemaVersion": 1,
  "warnings": [],
}
`;

exports[`golden protocol fixtures > unsupported skill and agent pair 1`] = `
{
  "changed": false,
  "command": "install.plan",
  "data": {},
  "errors": [
    {
      "agentId": "gemini",
      "category": "conflict",
      "code": "SKILL_NOT_SUPPORTED_BY_AGENT",
      "message": "Skill "corvus-skillpack:react-component-design" does not support Gemini CLI.",
      "retryable": false,
      "skillId": "corvus-skillpack:react-component-design",
    },
  ],
  "nextActions": [
    {
      "code": "list-skills",
      "command": "corvus-skills skills list --json",
      "description": "List available skill IDs and their agent compatibility.",
    },
  ],
  "ok": false,
  "schemaVersion": 1,
  "warnings": [],
}
`;
